syntax = "proto2";
package Konata.Core.Packets.Msf;

message SubMsgType0x1a {
  message MsgBody {  
    optional bytes fileKey = 1;
    optional uint32 fromUin = 2;
    optional uint32 toUin = 3;
    optional uint32 status = 4;
    optional uint32 ttl = 5;
    optional string desc = 6;
    optional uint32 type = 7;
    optional uint32 captureTimes = 8;
    optional uint64 fromUin64 = 9;
    optional uint64 toUin64 = 10;
  }
}

